--- a/sobre.html
+++ b/sobre.html
@@ -47,7 +47,7 @@
                     </div>
                 </section>
                 <section class="texto">
-                    <h1 class="nome">Marcus Soares Filho</h1>
+                    <h1 class="nome">Isso é apenas um site de teste para estudos</h1>
                     <p class="paragrafo">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                         sed do eiusmod tempor incididunt ut labore et dolore 
