--- a/contato.html
+++ b/contato.html
@@ -2,14 +2,14 @@
 <html lang="pt-br">
     <head>
         
-       <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XB5WC37Q6P"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XSCJX7Q29E"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-XB5WC37Q6P');
+  gtag('config', 'G-XSCJX7Q29E');
 </script>
         
         <meta charset="UTF-8">
