--- a/contato.html
+++ b/contato.html
@@ -80,12 +80,12 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" target="_blank">
+                        <a href="https://simples.vet/" target="_blank">
                             <span class="fab fa-facebook-f"></span>
                         </a>
                     </li>
                     <li>
-                        <a href="#" target="_blank">
+                        <a href="https://simples.vet/" target="_blank">
                             <span class="fab fa-twitter"></span>
                         </a>
                     </li>
