--- a/contato.html
+++ b/contato.html
@@ -90,7 +90,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" target="_blank">
+                        <a href="https://www.youtube.com/" target="_blank">
                             <span class="fab fa-youtube"></span>
                         </a>
                     </li>
