--- a/contato.html
+++ b/contato.html
@@ -75,7 +75,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" target="_blank">
+                        <a href="https://www.instagram.com/" target="_blank">
                             <span class="fab fa-instagram"></span>
                         </a>
                     </li>
