--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <nav>
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <div <li><a href="sobre.html">Sobre</a></li> class="sobre">
+                        <div><li><a href="sobre.html">Sobre</a></li>
                         <li><a href="contato.html">Contato</a></li>
                     </ul>
                 </nav>
