--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                         <li><a href="index.html">Home</a></li>
                         <div><li><a href="sobre.html">Sobre</a></li>
                         <li><a href="contato.html">Contato</a></li>
+                         <div><li><a href="experimente.html">Experimente</a></li>
                     </ul>
                 </nav>
             </div>
