--- a/sobre.html
+++ b/sobre.html
@@ -55,6 +55,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="sobre.html">Sobre</a></li>
+                        <li><a href="experimente.html">Experimente</a></li>
                         <li><a href="contato.html">Contato</a></li>
                     </ul>
                 </nav>
