--- a/index.html
+++ b/index.html
@@ -86,8 +86,10 @@
                     <div class="item">Destaque 3</div>
                 </section>
             </article>
+            <div class="Whats" > 
+                <img src="whatsapp.png" width="50" alt="Fale conosco" title = "Mande um Whatsapp" />
+            </div>
         </main>
-
         <footer>
             <small>Todos os direitos reservados 2020</div>
         </footer>
