--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </section>
             </article>
             <div class="Whats" > 
-               <a href="https://wa.me/55"target="_blank"> 
+               <a href="https://wa.me/55 (11) 30004-2222" target="_blank"> 
                 <img src="whatsapp.png" width="50" alt="Fale conosco" title = "Mande um Whatsapp" />
                </a>    
             </div>
