--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
         <header>
             <div class="container">
                 <div class="logo"><img src="./img/logo.png" alt="logo" title="logo"></div>
+                <div id="divBusca">
+                      <img src="search3.png" alt="Buscar..."/>
+                      <input type="text" id="txtBusca" placeholder="Buscar..."/>
+                      <button id="btnBusca">Buscar</button>
+                </div>
                 <nav>
                     <ul>
                         <li><a href="index.html">Home</a></li>
