--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="container">
                 <div class="logo"><img src="./img/logo.png" alt="logo" title="logo"></div>
                 <div id="divBusca">
-                      <img src="search3.png" alt="Buscar..."/>
+                      <img src="pesquisa.png" alt="Buscar..."/>
                       <input type="text" id="txtBusca" placeholder="Buscar..."/>
                       <button id="btnBusca">Buscar</button>
                 </div>
