--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
                 <ul class="rslides">
                     <li>
                         <img src="./img/slide1.jpg" alt="Slide 1">
+                        <!-- Widget em linha do Calendly - início -->
+<div class="calendly-inline-widget" data-url="https://calendly.com/simplesvet-usabilidade/evento-teste" style="min-width:320px;height:700px;"></div>
+<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+<!-- Widget em linha do Calendly - fim -->
                     </li>
                     <li>
                         <img src="./img/slide2.jpg" alt="Slide 2">
