--- a/experimente.html
+++ b/experimente.html
@@ -111,8 +111,8 @@
                         erat nam. Amet volutpat consequat mauris nunc congue nisi. 
                         Tortor at risus viverra adipiscing at.
                     </p>
-                    <!-- Widget em linha do Calendly - início -->
-<div class="calendly-inline-widget" data-url="https://calendly.com/simplesvet-usabilidade/evento-teste" style="min-width:320px;height:700px;"></div>
+                <!-- Widget em linha do Calendly - início -->
+<div class="calendly-inline-widget" data-url="https://calendly.com/simplesvet-usabilidade/evento-teste?hide_event_type_details=1&hide_gdpr_banner=1" style="min-width:320px;height:700px;"></div>
 <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
 <!-- Widget em linha do Calendly - fim -->
                 </section>
